# filetype

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  fly.toml
src/: lib.rs
www/: index.css  index.html  index.js  package.json  worker.js
