[package]
name = "filetype-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-file-reader = "1"
web-sys = { version = "0.3.63" , features = ["console"] }
infer = { version = "0.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-wasm-bindgen = "0.5"
human_bytes = "0.4.2"

#[profile.release]
#opt-level = "z"